2005-01-01 Saturday 10:35  corts

	* ChangeLog.txt:
	
	update change log

2005-01-01 Saturday 09:32  corts

	* src/Test/CommonsExtPropTestCase.cs:
	
	remove update todo comment that was handled

2005-01-01 Saturday 09:31  corts

	* src/Commons/Collections/ExtendedProperties.cs:
	
	Handle commas found in already parsed properties files when using
	the convert method

2004-12-26 Sunday 23:27  corts

	* java/: readme.txt, velocity.zip:
	
	updated with some of the changes for version 1.4, mainly the
	changes for Uberspect so far.

2004-12-26 Sunday 23:21  corts

	* www/.cvsignore:
	
	no message

2004-12-26 Sunday 23:16  corts

	* src/NVelocity.csproj:
	
	updates to support Uberspect (Velocity 1.4)

2004-12-26 Sunday 23:16  corts

	* src/NVelocity.sln:
	
	no message

2004-12-26 Sunday 23:14  corts

	* src/.cvsignore:
	
	ignore resharper add in files

2004-12-26 Sunday 23:12  corts

	* src/IO/VelocityWriter.cs:
	
	handle possible null string

2004-12-26 Sunday 23:11  corts

	* src/App/VelocityEngine.cs:
	
	add new constructors that will also initialize the instance

2004-12-26 Sunday 23:09  corts

	* src/Test/VTLTest.cs:
	
	tests for stange VTL problems -- currently has a failing test that
	identifies a problem in Velocity as well as NVelocity

2004-12-26 Sunday 23:07  corts

	* src/Test/Commons/: KeyedListTest.cs, LRUMapTest.cs:
	
	tests for new Commons.Collections classes

2004-12-26 Sunday 23:06  corts

	* src/Test/ContextTest.cs:
	
	test to make sure that case insensative contexts could be created

2004-12-26 Sunday 23:05  corts

	* src/NVelocity.Test.csproj:
	
	add new tests

2004-12-26 Sunday 23:01  corts

	* src/Test/TemplateTestCase.cs:
	
	reformatting

2004-12-26 Sunday 22:59  corts

	* src/: Runtime/RuntimeInstance.cs, Runtime/RuntimeServices.cs,
	Runtime/RuntimeSingleton.cs, SupportClass.cs:
	
	updates to support Uberspect (Velocity 1.4)

2004-12-26 Sunday 22:55  corts

	* src/: Util/ArrayIterator.cs, Util/EnumerationIterator.cs,